# CS231N_FINAL_PROJECT

./: .gitignore  .gitmodules  AGENT_CONTEXT.md  FiGS_instructions.md  LICENSE  README.md  V-LEAD_instructions.md  cs231n_project_context.md
nav_policy/: .gitattributes  .gitignore  README.md  docker-compose.yml  modal_train.py  pyproject.toml  requirements.txt  yash_readme.md
nav_policy/configs/: ABLATIONS.md  ablation_no_goal.yaml  arch_ablation_a0_rgb.yaml  arch_ablation_a1_concat.yaml  arch_ablation_a3_no_aug.yaml  arch_ablation_a4_goal2.yaml  arch_rgb_da2_crossattn.yaml  dagger_round1_mpc.yaml  dagger_round2_mpc.yaml  dagger_val_hard_mpc.yaml  dagger_val_hard_mpc_verify.yaml  default.yaml  eval_closed_loop_backroom_val.yaml  eval_closed_loop_flightroom.yaml  eval_closed_loop_flightroom_suite.yaml  eval_closed_loop_no_goal.yaml  eval_closed_loop_ood_suite.yaml  eval_closed_loop_rl_train_suite.yaml  eval_closed_loop_stress.yaml  eval_closed_loop_test.yaml  eval_offline_flightroom.yaml  flightroom.yaml  flightroom_local_film.yaml  flightroom_modal.yaml  smoke.yaml  train_rl_100_expert_x0.yaml  train_rl_100_expert_x0_stable.yaml  train_rl_expert_x0_sweep.yaml  train_rl_flightroom.yaml  train_rl_flightroom_sac.yaml  train_rl_local.yaml  train_rl_mixed_recovery.yaml  train_rl_smoke.yaml  train_rl_test_packardpark.yaml  train_rl_val_071733.yaml
nav_policy/docs/: CROSS_SCENE_DA2_RL_PLAN.md
nav_policy/scripts/: build_dataset.py  build_dataset_flightroom.py  check_3dgs.sh  collect_ablations.py  compute_expert_stats.py  count_params.py  eval_in_figs.py  eval_offline.py  (+14 more)
(+30 files in other folders)
